<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables, UselessParent, HardcodedText"
    tools:context=".activity.PayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarPay"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Thanh toán"
        android:background="#36DD07"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>



    <LinearLayout
        android:id="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/toolBarPay"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/attach_money_24"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtTotalCoin"
                    android:text="@string/k25"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/phone_24"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtSdt"
                    android:text="@string/myPhoneNum"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_email_24"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtEmailPay"
                    android:text="@string/emailEX"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/person_24"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtUserPay"
                    android:text="phong"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

    </LinearLayout>


        <ImageView
            android:src="@drawable/img"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpLay"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAddress"
            android:drawableStart="@drawable/add_location_24"
            android:drawablePadding="5dp"
            android:hint="@string/inpLocation"
            android:textColorHint="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPay"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:backgroundTint="@color/textColor"
        android:text="@string/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>